[ADD] Service to get the list of products from the API.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <pma-navigation-panel></pma-navigation-panel>
-<router-outlet></router-outlet>
+<section class="main-dashboard-section h-100">
+  <router-outlet></router-outlet>
+</section>
