--- a/src/app/components/navigation-panel/navigation-panel.component.html
+++ b/src/app/components/navigation-panel/navigation-panel.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-light bg-light align-items-start">
   <div class="container-fluid flex-column align-items-start">
-    <a class="navbar-brand" routerLink="/">
-      <img src="assets/img/brand_logo.jpg" alt="Project management app">
+    <a class="navbar-brand m-0" routerLink="/">
+      <img src="assets/img/brand_logo.jpg" alt="Product management app">
     </a>
     <div>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" [routerLink]="navigationRoutes.Home"
+          <a class="nav-link" aria-current="page" [routerLink]="navigationRoutes.productsListPagePath"
             routerLinkActive="active">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="navigationRoutes.Trash" routerLinkActive="active">Trash</a>
+          <a class="nav-link" [routerLink]="navigationRoutes.productsTrashPagePath" routerLinkActive="active">Trash</a>
         </li>
       </ul>
     </div>
