--- a/src/app/modules/products/components/products-filter-panel/products-filter-panel.component.html
+++ b/src/app/modules/products/components/products-filter-panel/products-filter-panel.component.html
@@ -26,7 +26,24 @@
     </div>
   </div>
 
-  <p role="button" class="text-primary mt-3" *ngIf="selectedProductCategory || selectedPriceFilter"
-    (click)="clearAllFilters()"> Clear all filters </p>
+  <hr>
+
+  <div class="filter-section">
+    <h5 class="mb-3"> Availability </h5>
+    <div class="d-flex" *ngFor="let inStockOption of inStockOptions">
+      <input class="form-check-input" type="radio" name="inStock" [value]="inStockOption.value"
+        [id]="inStockOption.title" [(ngModel)]="selectedInStockOptionValue"
+        (ngModelChange)="changeSelectedInStockOption(inStockOption)">
+      <label role="button" class="text-secondary ms-2" [for]="inStockOption.title"
+        [ngClass]="{ 'fw-bold text-dark':  selectedInStockOptionValue === inStockOption.value }">
+        {{ inStockOption.title }}
+      </label>
+    </div>
+  </div>
+
+  <p role="button" class="text-primary mt-3"
+    *ngIf="selectedProductCategory || selectedPriceFilter || selectedInStockOptionValue" (click)="clearAllFilters()">
+    Clear all filters
+  </p>
 
 </div>
