--- a/src/app/modules/products/pages/product-list/product-list.component.html
+++ b/src/app/modules/products/pages/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <div class="h-100 d-flex flex-column">
   <pma-products-list-header class="flex-shrink-0"></pma-products-list-header>
-  <div class="container-fluid flex-grow-1 overflow-hidden">
+  <div class="container-fluid flex-grow-1 overflow-hidden ps-4">
     <div class="row h-100">
       <div class="col-2">
         <pma-products-filter-panel></pma-products-filter-panel>
