--- a/src/app/modules/products/components/products-list-header/products-list-header.component.html
+++ b/src/app/modules/products/components/products-list-header/products-list-header.component.html
@@ -1,4 +1,5 @@
-<div class="product-list-header p-4">
+<div class="product-list-header d-flex justify-content-between p-4">
+  <h1> Products </h1>
   <form class="d-flex justify-content-end">
     <input class="form-control me-2 w-25 search-control" type="search" placeholder="Search" aria-label="Search"
       [formControl]="searchControl">
