[ADD] Details to the products page.

--- a/src/app/modules/products/pages/product-details/product-details.component.html
+++ b/src/app/modules/products/pages/product-details/product-details.component.html
@@ -23,6 +23,9 @@
         <span class="badge ms-3" [ngClass]="productData.inStock ? 'bg-success' : 'bg-danger'">
           {{ productData.inStock ? 'In Stock' : 'Not in Stock'}}
         </span>
+        <div>
+          <rating [(ngModel)]="productData.ratingStar" [max]="5" [readonly]="true"></rating>
+        </div>
       </div>
     </div>
   </div>
