--- a/src/app/modules/products/components/add-product-modal/add-product-modal.component.html
+++ b/src/app/modules/products/components/add-product-modal/add-product-modal.component.html
@@ -69,8 +69,7 @@
         <label class="form-label"> Availability </label>
         <div class="d-flex">
           <div class="d-flex">
-            <input type="radio" class="form-check-input" id="inputInStock" value="inStock"
-              formControlName="inStock">
+            <input type="radio" class="form-check-input" id="inputInStock" value="inStock" formControlName="inStock">
             <label for="inputInStock" class="form-label ms-2"> In Stock </label>
           </div>
           <div class="d-flex ms-4">
@@ -102,4 +101,4 @@
     </form>
 
   </div>
-</ngx-smart-modal>>
+</ngx-smart-modal>
