--- a/src/app/modules/products/components/product-card/product-card.component.html
+++ b/src/app/modules/products/components/product-card/product-card.component.html
@@ -8,5 +8,7 @@
     <p class="card-text text-primary">
       {{ productData.price | currency:'INR' }}
     </p>
+
+    <button type="button" class="btn btn-primary" (click)="deleteProduct($event)"> Delete </button>
   </div>
 </a>
