--- a/src/app/modules/products/pages/product-list/product-list.component.html
+++ b/src/app/modules/products/pages/product-list/product-list.component.html
@@ -7,7 +7,7 @@
       </div>
       <div class="col-10 overflow-auto h-100">
         <div class="row">
-          <div class="col-4" *ngFor="let product of products; trackBy:productsTrackBy">
+          <div class="col-4" *ngFor="let product of products; trackBy:productsTrackBy; let index=index">
             <pma-product-card [productData]="product">
             </pma-product-card>
           </div>
@@ -18,3 +18,4 @@
   <button type="button" class="btn btn-primary add-product-button" (click)="openModal()"> Add product </button>
 </div>
 <pma-add-product-modal (productAdd)="appendNewProduct($event)"></pma-add-product-modal>
+<pma-confirmation-modal (confirm)="deleteProduct($event)"></pma-confirmation-modal>
